Faculty Module is completed.

--- a/WebContent/error.html
+++ b/WebContent/error.html
@@ -47,7 +47,7 @@ try{if (!window.CloudFlare) {var CloudFlare=[{verbose:0,p:0,byc:0,owlid:"cf",bag
 <div class="error-container text-center">
 <h1 class="error-number">404</h1>
 <h2 class="semi-bold">ERROR</h2>
-<p>This page you are looking for does not exsist <a href="home.jsp">Access Home.</a>
+<p>This page you are looking for does not exsist <a href="Home">Access Home.</a>
 </p>
 </div>
 </div>
